# amazon-product-extractor

./: README.md  main.py  pyproject.toml
images/B07MHJFRBJ/: product.json
knowledge/: git_scape_amazon_scraper_digest.txt
